--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bufferutil": "^4.0.6",
     "chalk": "4",
     "colors": "^1.4.0",
+    "discord-api-types": "^0.37.69",
     "discord-modals": "1",
     "discord.js": "^14.14.1",
     "dotenv": "^16.0.1",
